Changes for 1.1beta9:

 - dropped support of experimental parameter NoTimeWait (Alexei)
 - removed unused escalator (Alexei)
 - removed escalation tables (Alexei)
 - fix compilation if no function atoll() (Alexei)
 - fixed compilation issue in run_command() (Alexei)
 - added vertical text for OVERVIEW (Eugene)
 - fixed items status changing of parent hosts (Eugene)
 - one separated poller process for unreachable hosts (Alexei)
 - better function is_double() (Alexei)
 - fixed host conditions in actions (Alexei)
 - improved filter by hosts and groups (Eugene)
 - fixed processing of trapped items when a key contains '\' (Alexei)
 - added latest values filtring/marking of log history (Eugene)
 - developed multiple log history viewing (Eugene)

Changes for 1.1beta8:

 - moved installation of images to data.sql (Alexei)
 - fixed highly unefficient check of permissions (Alexei)
 - developed remote commads execution on specific actions (Eugene)
 - added "URL" module for screens (Eugene)
 - added trigger selecton from popup (Eugene)
 - improved popup selection (Eugene)
 - improved "IT services" configuration (Eugene)
 - added "Data overview" for screens (Eugene)
 - added "Triggers overview" for screens (Eugene)
 - added blinking into Trigger overview (Eugene)
 - added screen displaying in other screen (Eugene)
 - improved Overview table header, vertical text added (Eugene)
 - developed "ZABBIX Clock" module for screens (Eugene)
 - developed "ZABBIX server info" module for screens (Eugene)
 - developed "Triggers info" module for screens (Eugene)
 - developed "Host info" module for screens (Eugene)
 - improved screens displaying, added item alignment (Eugene)
 - improved ZABBIX server report (Eugene)
 - improved images configuration (Eugene)
 - added onserver image resizing for thumbs by php (Eugene)
 - developed acknowledges system (Eugene)
 - added icons displaying for maps (Eugene)
 - added maps displaying for maps (Eugene)