@@ -262,11 +262,11 @@
 #define	AGENTD_FORKS	5
 
 #define	TRAPPERD_FORKS	5
-#define	SUCKER_FORKS	11
+#define	POLLER_FORKS	11
 
 #define	POLLER_DELAY	5
 
-#define	SUCKER_TIMEOUT	5
+#define	POLLER_TIMEOUT	5
 /* Do not perform more than this number of checks during unavailability period */
 #define SLEEP_ON_UNREACHABLE		60
 #define CHECKS_PER_UNAVAILABLE_PERIOD	4
