@@ -12,7 +12,7 @@ Server=1
 # Number of pre-forked instances of pollers
 # Default value is 6
 # This parameter must be between 5 and 255
-StartSuckers=6
+StartPollers=6
 
 # Number of pre-forked instances of trappers
 # Default value is 5
